--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6"
+      crossorigin="anonymous"
+    />
     <script src="https://cdn.socket.io/4.0.0/socket.io.min.js"></script>
     <style>
       * {
@@ -55,12 +61,17 @@
   </head>
   <body>
     <div id="usernameDiv">
-      <input type="textbox" placeholder="Enter a username" /><br /><br />
-      <button id="submit">Submit</button>
+      <input
+        type="textbox"
+        placeholder="Enter a username"
+        class="form-control"
+      /><br /><br />
+      <button id="submit" class="btn btn-primary">Submit</button>
     </div>
     <div id="chat-box">
       <div id="side-panel">
         <h3>Active Users</h3>
+        <ul id="active-users"></ul>
       </div>
       <div id="chat-panel">
         <div id="output"></div>
@@ -114,13 +125,14 @@
 
       //listen for users emit
       socket.on("users", (users) => {
-        const userList = document.createElement("ul");
+        const activeUsrs = document.createElement("ul");
         users.forEach((user) => {
           const listItem = document.createElement("li");
           listItem.innerHTML = user.username;
-          userList.appendChild(listItem);
+          activeUsrs.appendChild(listItem);
         });
-        sidePanel.innerHTML = userList;
+        const activeUsers = document.getElementById("active-users");
+        sidePanel.replaceChild(activeUsrs, activeUsers);
       });
 
       //listen for message emit
